--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentine!!! :D</p>
+        <p>It's Valentinesssss!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            Wikihow, how to ask a girl to be your Valentine...
           </p>
           <p class="fake-btn">Send</p>
         </div>
