--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="two" id="greetingText">I really like your name btw!</p>
       </div>
       <div class="three">
-        <p>It's Valentinesssss!!! :D</p>
+        <p>It's getting close to Valentinesssss!!! :D</p>
       </div>
       <div class="four">
         <div class="text-box">
@@ -90,6 +90,7 @@
           <img src="img/balloon.svg" alt="" />
           <img src="img/music-note.svg" alt="" /> -->
           <img src="img/smiling.svg" />
+		  <img src="img/AnimalCrossingLeaf" />
           <!-- <img src="img/heart.svg" /> -->
           <!-- <img src="img/happy.svg" alt="" /> -->
         </div>
